--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,8 +25,8 @@ jobs:
 
     env:
       DB_CONNECTION: ${{ secrets.DB_CONNECTION }}
-      DB_HOST: 127.0.0.1
-      DB_PORT: 3306
+      DB_HOST: ${{ secrets.DB_HOST }}
+      DB_PORT: ${{ secrets.DB_PORT }}
       DB_DATABASE: ${{ secrets.DB_DATABASE }}
       DB_USERNAME: ${{ secrets.DB_USERNAME }}
       DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
@@ -54,8 +54,8 @@ jobs:
       - name: Wait for MySQL to be ready
         run: sleep 15
 
-      - name: Run Laravel migrations
-        run: php artisan migrate --force
+      # - name: Run Laravel migrations
+      #   run: php artisan migrate --force
 
       - name: Run Laravel tests
         run: php artisan test
