--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,7 @@ on:
       - main
   pull_request:
     types: [opened, synchronize, reopened]
+    branches: [main]
 jobs:
   laravel-tests:
     runs-on: ubuntu-latest
